--- a/htmlPages/addToCart.html
+++ b/htmlPages/addToCart.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="">
-        <button class="bg-red-600 text-white p-1 rounded-md absolute right-3" id="clear-cart">clear cart</button>
+        <button class="bg-red-600 text-white p-1 rounded-md absolute right-3 top-3" id="clear-cart">clear cart</button>
     </div>
 
     <div class=" mt-4 flex flex-col items-center justify-center" id="cart-length">
@@ -28,16 +28,21 @@
         <button class="bg-green-500 p-1 rounded-md capitalize mt-4 text-white" id="select-products">go to products</button>
     </div>
 
-<div class="cart w-full justify-around gap-3" id="cart">
+<div class="cart w-full justify-around gap-3 px-3" id="cart">
 
 </div>
 
 
 <div class="flex justify-center mt-5">
-    <div class="price p-2 text-red-700 capitalize text-2xl shadow-lg">
-        total price : <strong class="total-price" id="total-price"></strong>
+    <div class="price p-2 text-red-700 capitalize  shadow-lg text-sm lg:text-xl">
+        total cart  price : <strong class="total-price" id="total-price"></strong>
     </div>
 </div>
+
+
+
+ 
+
 
     <script src="../addToCart.js"></script>
 </body>
