--- a/htmlPages/addToCart.html
+++ b/htmlPages/addToCart.html
@@ -25,7 +25,7 @@
 
     <div class=" mt-4 flex flex-col items-center justify-center" id="cart-length">
         <p class="text-red-600 text-3xl capitalize text-center">your cart is empty</p>
-        <button class="bg-green-500 p-1 rounded-md capitalize mt-4 text-white" id="select-products">go to products</button>
+        <button class="bg-green-500 p-1 rounded-md capitalize mt-4 text-white" id="select-products">continue shopping</button>
     </div>
 
 <div class="cart w-full justify-around gap-3 px-3" id="cart">
