--- a/htmlPages/addToCart.html
+++ b/htmlPages/addToCart.html
@@ -33,7 +33,10 @@
 </div>
 
 
-<div class="flex justify-center mt-5">
+<div class="flex flex-col gap-3 justify-center mt-5">
+     <div class="price p-2 text-red-700 capitalize  shadow-lg text-sm lg:text-xl">
+        total cart  price : <strong class="total-price" id="cart-quantity"></strong>
+    </div>
     <div class="price p-2 text-red-700 capitalize  shadow-lg text-sm lg:text-xl">
         total cart  price : <strong class="total-price" id="total-price"></strong>
     </div>
