--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- here goes credentials -->
-    <div class="text-[15px] lg:text-sm login-signup cursor-pointer " id="login-signup">
+    <div class="text-[15px] lg:text-sm login-signup cursor-pointer hover:scale-110 transition-all duration-500 ease-in-out" id="login-signup">
         <span>login</span>
         <span>/</span>
         <span>sign up</span>
