--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- here goes logo -->
    <!-- <div class="flex justify-around  w-full lg:w-1/2"> -->
      <div class="nav-logo">
-        <p class="font-bold text-[12px] lg:text-xl">two pages mini ecommerce web</p>
+        <p class=" text-[12px] lg:text-xl lg">two pages mini ecommerce web</p>
     </div>
 
 
