--- a/htmlPages/form.html
+++ b/htmlPages/form.html
@@ -22,8 +22,7 @@
             <button class="bg-green-500 p-1 rounded-md capitalize" type="submit">
                 register
             </button>
-            <a href="./login.html" class="text-blue-500 underline text-[10px]">have acct ?</a>
-
+                <button class="" id="direct-login"> <a href="" class="text-blue-500 underline text-[10px]">have acct ?</a></button>
          </form>
 
 
